--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -17,6 +17,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
+  text-align: center;
   font-family: "Noto Sans JP", sans-serif;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
@@ -130,8 +131,4 @@ h3 {
   }
 
   @return $font + px;
-}
-
-.ejemplo {
-  font-size: font-calc(50, h2);
 }
