--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@ header {
   span {
     transition: 0.5s linear;
   }
-  span:hover {
+  &:hover {
     margin-bottom: 5px;
     color: crimson;
     text-shadow: 0 0 10px #e73c7e, 0 0 20px blueviolet, 0 0 40px #e73c7e;
@@ -70,12 +70,12 @@ li {
   margin: 5px;
   padding: 0 40px;
   cursor: pointer;
-}
-.nav__item:hover {
-  background: crimson;
-  color: #fff;
-}
 
+  &:hover {
+    background: crimson;
+    color: #fff;
+  }
+}
 .nav__inner {
   display: flex;
   flex-direction: column;
@@ -94,7 +94,7 @@ li {
 /*index*/
 
 .presentacion {
-  padding-top: 100px;
+  padding-top: 30px;
   padding-bottom: 50px;
   @include caja-flex(space-between, center, nowrap);
 
@@ -156,6 +156,13 @@ li {
       transition: 200ms ease-in-out;
       -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+
+      &:hover {
+        margin-bottom: -10px;
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+      }
+
       h1 {
         color: #fff;
         padding: 30px;
@@ -167,12 +174,6 @@ li {
         -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
       }
-    }
-
-    .caja:hover {
-      margin-bottom: -10px;
-      -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
     }
 
     .texto h4 {
@@ -227,5 +228,81 @@ footer {
     }
   }
 }
+
+/*JUEGOS*/
+
+.juegos {
+  padding-top: 50px;
+  padding-bottom: 75px;
+  h1 {
+    color: gold;
+    margin-top: 0;
+    padding-right: 20px;
+    font-size: $font-h1;
+  }
+}
+
+.flip {
+  position: relative;
+  .front,
+  .back {
+    display: block;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 0.5s;
+    transition-property: transform, opacity;
+  }
+  .front {
+    transform: rotateY(0deg);
+  }
+  .back {
+    position: absolute;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(-180deg);
+  }
+  &:hover {
+    .front {
+      transform: rotateY(180deg);
+    }
+    .back {
+      opacity: 1;
+      transform: rotateY(0deg);
+    }
+  }
+}
+
+.flip {
+  position: relative;
+  display: inline-block;
+  margin-right: 2px;
+  margin-bottom: 1em;
+  width: 400px;
+  .front,
+  .back {
+    display: block;
+    color: white;
+    width: inherit;
+    background-size: cover !important;
+    background-position: center !important;
+    height: 220px;
+    padding: 1em 2em;
+    background: #313131;
+    border-radius: 10px;
+    p {
+      font-size: 1rem;
+      line-height: 160%;
+      color: #999;
+    }
+  }
+}
+
+/*PROXIMOS JUEGOS*/
+
+/*JUEGOS INDEPENDIENTES*/
+
+/*PRODUCTOS*/
 
 @import "medios";
