--- a/scss/main.scss
+++ b/scss/main.scss
@@ -187,18 +187,18 @@ li {
     }
 
     .uno {
-      background-image: url("../imagenes/NintendoSwitch.jpg");
+      background-image: url("../Imagenes/NintendoSwitch.jpg");
       background-size: cover;
       background-position: center;
     }
 
     .dos {
-      background-image: url("../imagenes/PlayStation.jpg");
+      background-image: url("../Imagenes/PlayStation.jpg");
       background-size: cover;
       background-position: center;
     }
     .tres {
-      background-image: url("../imagenes/XboxX.jpg");
+      background-image: url("../Imagenes/XboxX.jpg");
       background-size: cover;
       background-position: center;
     }
