--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,7 +94,7 @@ li {
 /*index*/
 
 .presentacion {
-  padding-top: 30px;
+  padding-top: 55px;
   padding-bottom: 50px;
   @include caja-flex(space-between, center, nowrap);
 
@@ -300,6 +300,38 @@ footer {
 }
 
 /*PROXIMOS JUEGOS*/
+
+.meses {
+  border-top: 4px solid rgb(0, 0, 0);
+}
+
+.proximojuego {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  position: relative;
+  img {
+    height: 600;
+    width: 400;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .resumen__juego {
+    border-top: 2px solid #fff;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-gap: 10px;
+    padding: 15px 0;
+    .title {
+      font-size: $font-h2;
+    }
+    .story {
+      font-size: $font-p;
+      text-align: right;
+      padding-right: 30px;
+    }
+  }
+}
 
 /*JUEGOS INDEPENDIENTES*/
 
