--- a/estilos/main.css
+++ b/estilos/main.css
@@ -75,7 +75,7 @@ a {
 
 /*Variable*/
 p {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: white;
 }
 
@@ -243,7 +243,7 @@ li {
 
 /*index*/
 .presentacion {
-  padding-top: 55px;
+  padding-top: 75px;
   padding-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -520,12 +520,209 @@ footer div img {
 }
 
 .proximojuego .resumen__juego .story {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-align: right;
   padding-right: 30px;
 }
 
 /*JUEGOS INDEPENDIENTES*/
+.containerindie {
+  max-width: 800px;
+  margin: 0 auto;
+  padding-bottom: 60px;
+}
+
+.carousel {
+  display: block;
+  text-align: left;
+  position: relative;
+  margin-bottom: 22px;
+}
+
+.carousel input {
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
+
+.carousel input:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: -500%;
+}
+
+.carousel input:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: -400%;
+}
+
+.carousel input:nth-of-type(4):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: -300%;
+}
+
+.carousel input:nth-of-type(3):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: -200%;
+}
+
+.carousel input:nth-of-type(2):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: -100%;
+}
+
+.carousel input:nth-of-type(1):checked ~ .carousel__slides .carousel__slide:first-of-type {
+  margin-left: 0%;
+}
+
+.carousel__slides {
+  position: relative;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.carousel__slide {
+  position: relative;
+  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  vertical-align: top;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: normal;
+}
+
+.carousel__slide figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+}
+
+.carousel__slide div {
+  position: relative;
+  width: 100%;
+}
+
+.carousel__slide div:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 66.66667%;
+}
+
+.carousel__slide div img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__slide figcaption {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  padding: 20px 20px 0 20px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 25%;
+  min-width: 150px;
+  font-size: 1.5rem;
+}
+
+.carousel__slide .credit {
+  margin-top: 1rem;
+  color: rgba(0, 0, 0, 0.5);
+  display: block;
+}
+
+.carousel__slide.scrollable {
+  overflow-y: scroll;
+}
+
+.carousel__thumbnails {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -10px;
+  margin-bottom: 50px;
+}
+
+.carousel__slides + .carousel__thumbnails {
+  margin-top: 20px;
+}
+
+.carousel__thumbnails li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: calc((100% / 6) - 20px);
+  margin: 0 10px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.carousel__thumbnails label {
+  display: block;
+  position: relative;
+}
+
+.carousel__thumbnails label:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 100%;
+}
+
+.carousel__thumbnails label img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__thumbnails label:hover, .carousel__thumbnails label:focus {
+  cursor: pointer;
+}
+
+.carousel__thumbnails label:hover img, .carousel__thumbnails label:focus img {
+  -webkit-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.carousel__thumbnails img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /*PRODUCTOS*/
 /*Desktop*/
 @media (min-width: 1400px) {
@@ -539,7 +736,7 @@ footer div img {
 }
 
 /*Ipad*/
-@media (max-width: 975px) {
+@media (max-width: 820px) {
   .presentacion,
   .consolas {
     -webkit-box-orient: vertical;
@@ -570,6 +767,7 @@ footer div img {
   .proximojuego .resumen__juego {
     border-top: none;
     border-bottom: 2px solid #fff;
+    font-size: 1.5rem;
   }
 }
 
@@ -602,8 +800,28 @@ footer div img {
     padding-top: 120px;
     padding-bottom: 320%;
   }
-  .resumen__juego .r {
+  .flip {
+    height: 100%;
+    width: 100%;
+  }
+  .proximojuego img {
+    height: 400px;
+    width: 300px;
+  }
+  .proximojuego .resumen__juego .r {
     font-size: 15px;
+  }
+  .carousel__slide figure {
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .carousel__slide figcaption {
+    min-width: 350px;
+  }
+  .carousel__thumbnails {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 /*# sourceMappingURL=main.css.map */
