--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -63,7 +63,7 @@ a {
 
 $font-p: 1.5rem;
 $font-h1: 3rem;
-$font-h2: 2.4rem;
+$font-h2: 2.5rem;
 $font-h3: 2rem;
 
 p {
@@ -79,6 +79,8 @@ h3 {
   font-size: $font-h3;
   font-weight: lighter;
 }
+
+/*botones*/
 
 .btn {
   border: none;
@@ -103,7 +105,34 @@ h3 {
 
 .btn-secundario {
   @extend .btn;
-  background-color: rgb(134, 132, 132);
+  background-color: rgb(255, 208, 0);
+}
+
+/*footer*/
+
+footer {
+  min-height: 80px;
+  background-color: rgb(0, 0, 0);
+  margin-top: 0;
+  .footer-content {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
+    justify-content: space-evenly;
+
+    img {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 20px;
+    }
+  }
 }
 
 /*Mixin*/
