--- a/scss/main.scss
+++ b/scss/main.scss
@@ -204,30 +204,6 @@ li {
     }
   }
 }
-footer {
-  min-height: 80px;
-  background-color: rgb(0, 0, 0);
-  margin-top: 0;
-  .footer-content {
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-
-  div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    list-style: none;
-    justify-content: space-evenly;
-
-    img {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 20px;
-    }
-  }
-}
 
 /*JUEGOS*/
 
@@ -486,5 +462,91 @@ footer {
 }
 
 /*PRODUCTOS*/
+
+.product-card {
+  background-color: #000000;
+  max-width: 550px;
+  min-height: 300px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 150px;
+  box-shadow: 8px 12px 30px;
+  color: #ffffff;
+  font-weight: normal;
+  text-align: left;
+  font-size: $font-p;
+  position: relative;
+}
+
+.product-details {
+  width: 53%;
+  float: left;
+  height: 100%;
+  padding: 30px;
+  h1 {
+    color: rgb(229, 255, 0);
+    font-family: monospace;
+    font-size: xx-large;
+  }
+}
+
+.product-image {
+  position: absolute;
+  right: -140px;
+  top: -40px;
+  img {
+    max-width: 400px;
+  }
+}
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.25);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+  &:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  & > div {
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: white;
+  }
+  header {
+    font-weight: bold;
+  }
+  h1 {
+    font-size: large;
+    margin: 0 0 15px;
+  }
+}
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 70px;
+  text-decoration: none;
+  &:hover {
+    color: black;
+  }
+}
 
 @import "medios";
