--- a/scss/_medios.scss
+++ b/scss/_medios.scss
@@ -114,8 +114,9 @@
     z-index: 1;
   }
   .product-image {
-    width: 75%;
-    left: 40%;
+    width: 60%;
+    height: 100px;
+    left: 50%;
     top: 10%;
   }
 }
